src/test/deca/codegen/valid/object/class_acces_possible_public.deca
//  Description : 
// 
//      Test correct qui utilise d'une classe et utilise une variable public
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {
    int x=3;
}
{
    A a = new A();
    int y= a.x;
    println(y);
}