src/test/deca/codegen/invalid/class_acces_impossible_protected.deca
//  Description : 
// 
//      Test incorrect qui utilise une classe et essaye d'avoir accès à une variable protected
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {
    protected int x=3;
}
{
    A a = new A();
    int y= a.x;
}